[gd_scene load_steps=21 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Sprites/RunningFootman/RECOVER_Untitled-1_20221114239360001.png" type="Texture" id=2]
[ext_resource path="res://Fonts/metal lord.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/archer/archerframe0001.png" type="Texture" id=4]
[ext_resource path="res://Scripts/PlayerBase.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 56.5, 342.5 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/metal lord.otf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0431373, 0.180392, 0, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.235294, 0, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=14]
flags = 4

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="PlayerBase" type="StaticBody2D"]
position = Vector2( 1, 0 )
collision_mask = 2
script = ExtResource( 5 )
health = 100.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5.72205e-06 )
scale = Vector2( 1.875, 10.6875 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 11 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = 60.0
margin_top = -120.0
margin_right = 124.0
margin_bottom = -106.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
percent_visible = false

[node name="FootmanLocation" type="Position2D" parent="."]
position = Vector2( 134, 226 )

[node name="ArcherLocation" type="Position2D" parent="."]
position = Vector2( 159, -64 )

[node name="DitchLocation" type="Position2D" parent="."]
position = Vector2( 65, 226 )

[node name="KnightLocation" type="Position2D" parent="."]
position = Vector2( 134, 226 )

[node name="BigMonkeLocation" type="Position2D" parent="."]
position = Vector2( 133, 226 )

[node name="ShowUnitsShop" type="Button" parent="."]
margin_left = 439.0
margin_top = -260.0
margin_right = 567.0
margin_bottom = -196.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "Buy Units"

[node name="Units" type="Panel" parent="."]
margin_left = 60.0
margin_top = -342.0
margin_right = 967.0
margin_bottom = -76.0
custom_styles/panel = SubResource( 1 )

[node name="HideUnitsShop" type="Button" parent="Units"]
margin_left = 705.0
margin_top = 161.0
margin_right = 833.0
margin_bottom = 225.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "Close"

[node name="Footman" type="TextureButton" parent="Units"]
margin_left = 5.0
margin_top = 97.0
margin_right = 117.0
margin_bottom = 209.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="PriceTag" type="Label" parent="Units/Footman"]
margin_left = -16.0
margin_top = 80.0
margin_right = 131.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Footman: $6"
align = 1
valign = 1

[node name="Archer" type="TextureButton" parent="Units"]
margin_left = 102.0
margin_right = 306.0
margin_bottom = 296.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="PriceTag" type="Label" parent="Units/Archer"]
margin_left = 15.0
margin_top = 177.0
margin_right = 168.0
margin_bottom = 201.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Archer: $20"
align = 1
valign = 1

[node name="Ditch" type="TextureButton" parent="Units"]
margin_left = 270.0
margin_top = 107.0
margin_right = 353.0
margin_bottom = 179.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 14 )
texture_pressed = SubResource( 14 )
texture_hover = SubResource( 14 )
expand = true
stretch_mode = 5

[node name="PriceTag" type="Label" parent="Units/Ditch"]
margin_left = -14.0
margin_top = 70.0
margin_right = 98.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Ditch: $12"
align = 1
valign = 1

[node name="Knight" type="TextureButton" parent="Units"]
margin_left = 379.0
margin_top = 107.0
margin_right = 462.0
margin_bottom = 179.0
focus_mode = 0
enabled_focus_mode = 0
expand = true
stretch_mode = 5

[node name="PriceTag" type="Label" parent="Units/Knight"]
margin_left = -14.0
margin_top = 70.0
margin_right = 98.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "Knight: $12"
align = 1
valign = 1

[node name="BigMonke" type="TextureButton" parent="Units"]
margin_left = 507.0
margin_top = 107.0
margin_right = 590.0
margin_bottom = 179.0
focus_mode = 0
enabled_focus_mode = 0
expand = true
stretch_mode = 5

[node name="PriceTag" type="Label" parent="Units/BigMonke"]
margin_left = -14.0
margin_top = 70.0
margin_right = 98.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "Big Monke : $30"
align = 1
valign = 1

[node name="Money" type="Label" parent="Units"]
margin_left = 792.0
margin_top = 73.0
margin_right = 912.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Money: $0"

[connection signal="pressed" from="ShowUnitsShop" to="." method="_on_ShowUnitsShop_pressed"]
[connection signal="pressed" from="Units/HideUnitsShop" to="." method="_on_HideUnitsShop_pressed"]
[connection signal="pressed" from="Units/Footman" to="." method="_on_Footman_pressed"]
[connection signal="pressed" from="Units/Archer" to="." method="_on_Archer_pressed"]
[connection signal="pressed" from="Units/Ditch" to="." method="_on_Ditch_pressed"]
[connection signal="pressed" from="Units/Knight" to="." method="_on_Knight_pressed"]
[connection signal="pressed" from="Units/BigMonke" to="." method="_on_BigMonke_pressed"]
